# ZXFoundation

./: .gitattributes  .gitignore  BUG_LIST.xml  CMakeLists.txt  Doxyfile  HEAD  NOTICE  README.md  Zconfig  configure.cmake  features  log  vm_architecture_plan.md  zxfoundation_complete_design.md  zxfoundation_kernel_map.md
.github/workflows/: doxygen.yaml  mdbook.yml
arch/s390x/: Zconfig.z
cmake/: build_number.cmake  ccache.cmake  configuration.cmake  dependencies.cmake  flags.cmake  hosttools.cmake  meta.cmake  platform.cmake  preconf.cmake  run.cmake  source.cmake  stage1-compile.cmake  standard.cmake  toolchain-validate.cmake  zx-discovery.cmake  zxallsyms.cmake  zxfl-compile.cmake  zxfoundation-compile.cmake  zxfoundation-zxallsyms-compile.cmake
cmake/configs/: base.cmake
cmake/toolchain/: xzfoundation-clang.cmake  zxfoundation-clang.cmake  zxfoundation-gcc.cmake  zxfoundation-template.cmake
crypto/: manifest.zxd  sha256.c  sha256.cxxm  sha256_types.cxxm
docs/: book.toml  dgp-architecture.md  dgp-master-refactor-plan.md  zx-discovery-spec.md
docs/architecture/: memory_management.md
docs/barebones/: .gitignore  README.md  compile.sh  etc.zxfoundation.parm  head64.S  hercules.cnf  link.ld  main.c  zxfl.h  zxvl.h  zxvl_cksum.c  zxvl_private.h
docs/basics/: building_and_running.md
docs/misc/: hercules_watchdog.md
docs/smp/: patching_hercules.md
docs/src/: SUMMARY.md  introduction.md
drivers/console/: Zconfig.z  diag.c  diag.cxxm  manifest.zxd  sclp.c
include/crypto/: sha256.h
include/lib/: bitmap.h  cmdline.h  ebcdic.h  list.h  rbtree.h  ringbuf.h  string.h  vsprintf.h
include/zxfoundation/: atomic.h  cmdlineopts.h  common.h  panic.h  percpu.h  spinlock.h  types.h  zconfig.h  zxconfig.h
lib/: algorithm.cxxm  array.cxxm  bit.cxxm  bitmap.cxxm  charconv.cxxm  cmdline.c  compare.cxxm  concepts.cxxm  cpumask.cxxm  cstring.cxxm  ebcdic.c  endian.cxxm  error.cxxm  expected.cxxm  format.cxxm  idalloc.cxxm  initializer_list.cxxm  iterator.cxxm  list.c  list.cxxm  manifest.zxd  min_heap.cxxm  optional.cxxm  pair.cxxm  placementnew.cxxm  queue.cxxm  rbtree.c  rbtree.cxxm  ring_buffer.cxxm  ringbuf.c  scope_guard.cxxm  source_location.cxxm  span.cxxm  static_vector.cxxm  string.c  string.cxxm  string_parser.cxxm  string_view.cxxm  tuple_types.cxxm  type_traits.cxxm  (+3 more)
lib/libssp/: README.md  ssp.c
lib/libubsanrt/: README.md  ubsan.c
scripts/: etc.zxfoundation.parm  hercules-diag288-watchdog.patch  hercules-diag318.patch  hercules-xtra-smp.patch  hercules.cnf  sysres.conf
scripts/patches/: hercules-diag288-watchdog.patch
scripts/schemas/: BUG_HISTORY.xsd
tools/: bin2rec.c  gen_checksums.c  zxallsyms_gen.c  zxsign.c
user/init/: CMakeLists.txt  init.S  link.ld
zxfoundation/base/: cmdline.cxxm  config.cxxm.in  endian.cxxm  linksym.cxxm  manifest.zxd  object.cxxm  precpp.hxx  types.cxxm  typestate.cxxm
zxfoundation/cap/: cap_types.cxxm  manifest.zxd  uoms.cxxm
zxfoundation/dgp/: dgp_authorize.cxxm  io_authority.cxxm  isolation.cxxm  isolation_types.cxxm  manifest.zxd  memory_contract.cxxm  sync_contract.cxxm
zxfoundation/domain/: domain.cxxm  domain_types.cxxm  manifest.zxd  signal.cxxm  signal_types.cxxm  strand_types.cxxm
zxfoundation/exec/: elf_loader.cxxm  elf_types.cxxm  exec.cxxm  manifest.zxd  test_binary.cxxm
zxfoundation/gate/: dispatch.cxxm  dispatch_table.cxxm  dispatch_table_types.cxxm  gate.cxxm  gate_registration.cxxm  gate_types.cxxm  manifest.zxd  nc_cap.cxxm  nc_dom.cxxm  nc_gate.cxxm  nc_io.cxxm  nc_mem.cxxm  nc_portal.cxxm  nc_sgn.cxxm  nc_sys.cxxm  nucleus_handlers.cxxm
zxfoundation/init/: bootstrap.cxxm  main.c  main.cxxm  manifest.zxd
zxfoundation/locking/: lock.cxxm  manifest.zxd  mcs_types.cxxm  mutex.cxxm  qspinlock.cxxm  qspinlock_types.cxxm  seqlock.cxxm
zxfoundation/memory/: cma.c  dma_pool.c  fault.cxxm  heap.c  hhdm.cxxm  hhdm_types.cxxm  kmalloc.c  numa.cxxm  (+17 more)
(+369 files in other folders)
